--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
   <meta name="author" content="Idoneo" />
   <meta name="robots" content="index, follow" />
 
+  <!-- Content Security Policy -->
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*.supabase.co; connect-src 'self' https://*.supabase.co https://*.google-analytics.com;" />
+
   <!-- Canonical -->
   <link rel="canonical" href="https://idoneo.ai/" />
 
